# hcesvm

./: .gitignore  ACCURACY_WEIGHT_REPORT.md  AGENTS.md  CLASS1_FIRST_SUMMARY.md  CLASS1_FIRST_THYROID_FULL_REPORT.md  CLAUDE.md  FINAL_TEST_RESULTS.md  Inverted_Strategy_Accuracy_Report.xlsx  README.md  TEST2_ACCURACY_REPORT.md  TEST3_REVALIDATION_REPORT.md  extract_accuracy_report.py  generate_detailed_report.py  monitor_test2_vs_test3.sh  pyproject.toml
.github/: dependabot.yml
docs/: CE_SVM_MATHEMATICAL_MODEL.md  DECISION_VARIABLES.md  TEST_REPORT.md
examples/: calculate_mae_comparison.py  decision_variables_example.py  estimate_mae_from_results.py  evaluate_test3_models.py  quick_feature_check.py  run_abalone_hierarchical.py  run_all_datasets.py  run_all_datasets_sequential.py  run_balance_hierarchical.py  run_car_hierarchical.py  run_class1_first_test.py  run_failed_datasets.py  run_inverted_all_datasets.py  run_ordinal_multiclass_demo.py  run_parkinsons.py  run_parkinsons_train_test.py  run_parkinsons_with_test.py  run_skill_method3_4class_1000_baselines.py  run_skill_method3_comparison.py  run_solar_flare_hierarchical.py  run_svor_npsvor_all_datasets.py  run_svor_npsvor_balance.py  run_teaching_data_hcesvm_1000.py  run_teaching_data_hcesvm_deadline.py  run_teaching_data_hcesvm_full.py  run_teaching_data_three_models.py  run_test2_7_fixed_datasets.py  run_test2_abalone_weights.py  run_test2_all_datasets.py  run_test2_fix_validation.py  run_test2_vs_test3_all_datasets.py  run_test3_comparison.py  run_test3_new_datasets.py  run_test3_revalidation.py  (+3 more)
(+165 files in other folders)
