[project]
name = "hcesvm"
version = "0.1.0"
description = "Hierarchical Cost-Effective SVM for ordinal classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "gurobipy>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hcesvm"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
